# EE576_MachineVisionCourseProjects

./: README.md
Hw2_AlmazM/: CMakeLists.txt  main.cpp  project2.cpp  project2.hpp  readme.txt
Project3_AlmazM/: CMakeLists.txt  main.cpp  project3.cpp  project3.hpp  readme.txt
Project4_AlmazM/: CMakeLists.txt  main.cpp  matplotlibcpp.h  project4.cpp  project4.hpp  readme.txt
Project5_AlmazM/: CMakeLists.txt  main.cpp  project5.cpp  project5.hpp  readme.txt
final/: CMakeLists.txt  main.cpp
hw1/: CMakeLists.txt  main.cpp  project1.cpp  project1.hpp  readme.txt
sinav/: CMakeLists.txt  main.cpp
